--- a/app/views/statics/home.html.haml
+++ b/app/views/statics/home.html.haml
@@ -1,1 +1,110 @@
-Welcome to Robin
+%html
+  %head
+    %title Robin
+    %meta{:content => "text/html; charset=utf-8", "http-equiv" => "Content-Type"}/
+    %script{:src => "http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"}
+    :javascript
+      var accessToken = "4c11bbd86fd64f2a86045a02197b657e";
+      var subscriptionKey = "b55a40bb-dcd0-4e77-9979-8030f7815911";
+      var baseUrl = "https://api.api.ai/v1/";
+
+      $(document).ready(function() {
+        $("#input").keypress(function(event) {
+          if (event.which == 13) {
+            event.preventDefault();
+            send();
+          }
+        });
+        $("#rec").click(function(event) {
+          switchRecognition();
+        });
+      });
+
+      var recognition;
+
+      function startRecognition() {
+        recognition = new webkitSpeechRecognition();
+        recognition.onstart = function(event) {
+          updateRec();
+        };
+        recognition.onresult = function(event) {
+          var text = "";
+            for (var i = event.resultIndex; i < event.results.length; ++i) {
+              text += event.results[i][0].transcript;
+            }
+            setInput(text);
+          stopRecognition();
+        };
+        recognition.onend = function() {
+          stopRecognition();
+        };
+        recognition.lang = "en-US";
+        recognition.start();
+      }
+
+      function stopRecognition() {
+        if (recognition) {
+          recognition.stop();
+          recognition = null;
+        }
+        updateRec();
+      }
+
+      function switchRecognition() {
+        if (recognition) {
+          stopRecognition();
+        } else {
+          startRecognition();
+        }
+      }
+
+      function setInput(text) {
+        $("#input").val(text);
+        send();
+      }
+
+      function updateRec() {
+        $("#rec").text(recognition ? "Stop" : "Speak");
+      }
+
+      function send() {
+        var text = $("#input").val();
+        $.ajax({
+          type: "POST",
+          url: baseUrl + "query/",
+          contentType: "application/json; charset=utf-8",
+          dataType: "json",
+          headers: {
+            "Authorization": "Bearer " + accessToken,
+            "ocp-apim-subscription-key": subscriptionKey
+          },
+          data: JSON.stringify({ q: text, lang: "en" }),
+
+          success: function(data) {
+            setResponse(JSON.stringify(data, undefined, 2));
+          },
+          error: function() {
+            setResponse("Internal Server Error");
+          }
+        });
+        setResponse("Loading...");
+      }
+
+      function setResponse(val) {
+        $("#response").text(val);
+      }
+
+    :css
+      body { width: 500px; margin: 0 auto; text-align: center; margin-top: 20px; }
+      div {  position: absolute; }
+      input { width: 400px; }
+      button { width: 50px; }
+      textarea { width: 100%; }
+    %body
+    %div
+      %input#input{:type => "text"}
+        %button#rec Speak
+        %br
+          Response
+          %br
+            %textarea#response{:cols => "40", :rows => "20"}
