ready for herokug

--- a/app/views/statics/home.html.haml
+++ b/app/views/statics/home.html.haml
@@ -7,13 +7,10 @@
     #rec
       = image_tag("mic.svg", :class => "mic") 
 
-
-
-
 %input#input{:type => "text", :style => "display:none"}
 %textarea#response{:cols => "40", :rows => "20", :style => "display:none"}
 
-%script{:src => "//js.pusher.com/2.2/pusher.min.js", :type => "text/javascript"}
 = javascript_tag do 
   pusher_key = "#{j @pusher_key }";
+%script{:src => "http://js.pusher.com/2.2/pusher.min.js", :type => "text/javascript"}
 = javascript_include_tag('home')
