--- a/app/views/statics/home.html.haml
+++ b/app/views/statics/home.html.haml
@@ -1,3 +1,6 @@
+= stylesheet_link_tag("style")
+= stylesheet_link_tag("animate.min")
+= stylesheet_link_tag("bootstrap.min")
 .alert.alert-info.alert-center{:role => "alert"}
   Pebble detected crash
 .container
